lisk-dex-electron/src/App.css
#root {
  height: 100%;
  width: 100%;
}

a {
  color: #44AADD;
}

li {
  padding-top: 5px;
  padding-bottom: 5px;
}

.button-sign-out {
  cursor: pointer;
  font-size: 20px;
  color: #FFFFFF;
  border: 0;
  padding: 5px 15px 5px 15px;
  outline: none;
  width: 105px;
  vertical-align: top;
  background: #880000;
}

.container {
  display: grid;
  height: calc(100% - 50px);
  grid-template-columns: 20% 20% 45% 15%;
  grid-template-rows: 50% 50%;
}

.markets-container {
  margin-top: 20px;
  margin-bottom: 20px;
}

.top-bar {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 50px;
  width: auto;
  padding: 0 10px;
  background-color: #000;
}

.top-bar-title {
  margin-right: auto;
}

.market-name-and-stats {
  grid-column: 4;
  grid-row: 1 / 3;
  background-color: #0d0e0e;
  padding-left: 10px;
  padding-top: 10px;
}

.buy-panel {
  position: relative;
  grid-column: 1;
  grid-row: 2 / 3;
  background-color: #1a1c1c;
  border-bottom: 1px dashed black;
  overflow-y: auto;
  overflow-x: hidden;
  padding-left: 10px;
  padding-top: 10px;
}

.sell-panel {
  position: relative;
  grid-column: 1;
  grid-row: 1 / 2;
  background-color: #1a1c1c;
  overflow-y: auto;
  padding-left: 10px;
  padding-top: 10px;
}

.sell-orders-title {
  background-color: #15191a;
  line-height: 30px;
  text-align: center;
  font-size: 14px;
}

.sell-orders {
  background-color: #15191a;
}

.buy-orders-title {
  background-color: #15191a;
  line-height: 30px;
  text-align: center;
  font-size: 14px;
}

.buy-orders {
  background-color: #15191a;
}

.price-display {
  background-color: #212424;
  line-height: 50px;
  font-size: 22px;
  padding-left: 10px;
  font-weight: bold;
  color: #ffffff;
}

.order-book-container {
  display: grid;
  grid-template-rows: 30px calc(50% - 55px) 50px calc(50% - 55px) 30px;
  grid-column: 2;
  grid-row: 1 / 3;
}

.price-chart {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  grid-column: 3;
  grid-row: 1 / 2;
}

.your-orders {
  display: grid;
  grid-template-rows: 35px calc(100% - 35px);
  grid-column: 3;
  grid-row: 2;
  background-color: #131414;
}

.your-orders-header {
  font-size: 20px;
  color: rgb(136, 136, 141);
  height: 35px;
  line-height: 35px;
  padding-left: 10px;
  padding-right: 10px;
}

.modal-background {
  position: absolute;
  z-index: 2;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.6;
  background: #000000;
}

.modal-foreground {
  position: absolute;
  display: flex;
  justify-content: center;
  align-content: center;
  width: 100%;
  height: 100%;
  z-index: 111; /* This is because of the chart in the background */
  opacity: 1;
}

.button-primary {
  cursor: pointer;
  font-size: 20px;
  color: #FFFFFF;
  border: 0;
  padding: 5px 15px 5px 15px;
  outline: none;
  background: #008800;
}

.button-secondary {
  cursor: pointer;
  font-size: 20px;
  color: #FFFFFF;
  border: 0;
  padding: 5px 15px 5px 15px;
  outline: none;
  background: #555555;
}

.tab-button {
  cursor: pointer;
  font-size: 20px;
  color: #000000;
  border: 0;
  padding: 5px 15px 5px 15px;
  outline: none;
  background: #999999;
}

.tab-button:disabled {
  cursor: default;
  font-size: 20px;
  color: #000000;
  border: 0;
  padding: 5px 15px 5px 15px;
  outline: none;
  background: #dddddd;
}

.error-message {
  font-size: 14px;
  margin-top: 4px;
  margin-bottom: 2px;
  color: #cc0000;
}

.lds-dual-ring {
  display: block;
  position: relative;
  width: 25px;
  height: 25px;
}
.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 85%;
  height: 85%;
  margin: 4px;
  border-radius: 50%;
  border: 3px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: lds-dual-ring 1.2s linear infinite;
  box-sizing: border-box;
}
@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.place-order-wallet-address, .place-order-balance {
  word-break: break-word;
}

@media only screen and (max-width: 1600px) {
  .sign-in-state-address {
    display: none;
  }
}

@media only screen and (max-width: 950px) {
  .container {
    height: 1650px;
    grid-template-columns: 50% 50%;
    grid-template-rows: 16% 20% 22% 22% 20%;
  }

  .your-order-entry {
    height: 50px;
  }

  .modal-background {
    height: 1400px;
  }

  .price-chart {
    grid-column: 1 / 3;
    grid-row: 2;
  }

  .sell-panel {
    grid-column: 1;
    grid-row: 3;
  }

  .buy-panel {
    grid-column: 1;
    grid-row: 4;
  }

  .place-order-wallet-address, .place-order-balance {
    display: inline-block;
    width: 100%;
    font-size: 12px;
  }

  .order-book-container {
    grid-column: 2;
    grid-row: 3 / 5;
  }

  .your-orders {
    grid-column: 1 / 3;
    grid-row: 5;
  }

  .market-name-and-stats {
    grid-column: 1 / 3;
    grid-row: 1;
  }

  .feedback-link {
    display: none;
  }

  .market-info-container {
    font-size: 9px;
  }
}

div {
  scrollbar-color: #212424 rgba(0, 0, 0, 0.3);
  scrollbar-width: thin;
}

div::-webkit-scrollbar {
  width: 12px;
}

div::-webkit-scrollbar-track {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

div::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #212424;
  outline: 0px;
}

